--- a/_config.yml
+++ b/_config.yml
@@ -19,12 +19,10 @@
 # in the templates via {{ site.myvariable }}.
 
 title: jcgraybill.github.io
-email: 65628360+jcgraybill@users.noreply.github.com
+markdown: GFM
 description: personal projects
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://jcgraybill.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: julesgraybill
-github_username:  jcgraybill
 
 # Build settings
 theme: jekyll-theme-slate
