--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ url: "https://jcgraybill.github.io/" # the base hostname & protocol for your sit
 # Build settings
 theme: jekyll-theme-slate
 plugins:
-  - jekyll-feed
+  - jemoji
 
 # Exclude from processing.
 # The following items will not be processed, by default.
