--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@
 
 title: jcgraybill.github.io
 markdown: GFM
-description: open source projects
+description: open source software
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://jcgraybill.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 
